--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-Django~=3.2.15
+attrs==22.2.0
+colorama==0.4.6
+Django==3.2.15
+filelock==3.17.0
+ipython==8.12.3
+Pillow==9.3.0
+Pillow==11.1.0
+pytest==7.1.3
